# WAF_ML

./: .pre-commit-config.yaml  README.md  pyproject.toml
.gitlab/merge_request_templates/: base.md
docker/: docker-compose.yml
models/CodeLlama_13B_GPTQ/: README.md
models/NeuralMonarch_7B_GPTQ/: README.md
models/Phi_3_mini_4k_instruct/: README.md
models/Stable_Code_Instruct_3B/: README.md
models/phillama_3.8b_v0.1/: README.md
notebooks/chaos/: mitm_test.py  proxy_test.py  scapy_test.py  trash_test.ipynb
notebooks/reports/: LoRA_LLM.ipynb  test_LLMs.ipynb
prompts/: s_prompt.txt  u_prompt.txt
src/: base_config.py
src/analytics_module/: LLM_analytics.py  config.py
src/collector_module/: collector.py  config.py
src/decision_module/: config.py  decision.py
