[tool.poetry]
name = "WAF_ML"
version = "0.3.0"
description = "Web Application Firewall with ML analitycs module"
authors = ["Aleksej Zhurin <2010zalex@gmail.com>"]
packages = [{ include = "src"}]

[tool.poetry.dependencies]
python = "3.10.12"
joblib = "*"
tqdm = "*"
rich = "^10.4.0"

[tool.poetry.group.dev.dependencies]
black = "^22.3.0"
pre-commit = "*"
isort = "^5.12.0"
flake8 = "^3.9.0"
jupyter = "*"
mypy = "^0.960"
nbqa = "^0.5.9"
autoflake = "*"
pydocstyle = "^6.1.1"
mlflow = "^2.5.0"

[tool.poetry.group.research.dependencies]
matplotlib = "*"
seaborn = "*"
pandas = "~2.2"
scikit-learn = "~1.4.2"

[tool.nbqa.mutate]
black = 1
autoflake = 1
isort = 1

[tool.isort]
profile = "black"
multi_line_output = 3

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"