[tool.poetry]
name = "WAF_ML"
version = "0.6.0"
description = "Web Application Firewall with ML analitycs module"
authors = ["Aleksej Zhurin <2010zalex@gmail.com>"]
packages = [{ include = "src"}]

[tool.poetry.dependencies]
python = "3.10.11"
joblib = "*"
tqdm = "*"
rich = "^10.4.0"
torch = {version = "2.2.2", source = "pytorch-gpu-src"}

[tool.poetry.group.dev.dependencies]
black = "^22.3.0"
pre-commit = "*"
isort = "^5.12.0"
flake8 = "^3.9.0"
jupyter = "*"
mypy = "^1.8.0"
nbqa = "^0.5.9"
autoflake = "*"
pydocstyle = "^6.1.1"
mlflow = "^2.5.0"

[tool.poetry.group.research.dependencies]
matplotlib = "*"
seaborn = "*"
pandas = "~2.2"
scikit-learn = "~1.4.2"
mitm = "^1.5.0"
pyshark = "^0.6"
proxy = "^0.0.1"
twisted = "^24.3.0"
plotly = "^5.21.0"
kaleido = "0.2.1"
peft = "^0.10.0"


[tool.poetry.group.collector_module.dependencies]
scapy = "^2.5.0"


[tool.poetry.group.analytics_module.dependencies]
torch = {version = "2.2.2+cu118", source = "pytorch-gpu-src"}
optimum = "^1.19.1"
transformers = "^4.40.1"
auto-gptq = {version = "^0.7.1+cu118", source = "auto_gptq_src"}

[[tool.poetry.source]]
name = "auto_gptq_src"
url = "https://huggingface.github.io/autogptq-index/whl/cu118/"
priority = "explicit"

[[tool.poetry.source]]
name = "pytorch-gpu-src"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"

[tool.nbqa.mutate]
black = 1
autoflake = 1
isort = 1

[tool.isort]
profile = "black"
multi_line_output = 3

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"